test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/compare_void_ptr_to_int.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  (
  void
  *
  )
  const int(0)
  ==
  const unsigned long(20ul)
  ;
  }
